--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -4,12 +4,15 @@
     Created on : 11/05/2016, 20:46:18
     Author     : arthur.lrsouza1
 -->
-<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
+<jsp:root xmlns:jsp="http://java.sun.com/JSP/Page" 
+          xmlns:c="http://java.sun.com/jsp/jstl/core"
+          version="2.0">
 
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
 
     <!-- any content can be specified here, e.g.: -->
     <h1> Projeto Alan</h1>
+   
     <div>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -17,35 +20,65 @@
                     <a class="navbar-brand" href="/Alan/Home">Alan</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastrar
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="CadastroFilial">Filial</a></li>
-                            <li><a href="CadastroProduto">Produto</a></li>
-                            <li><a href="CadastroUsuario">Usuário</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Operação
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="Compra">Compra</a></li>
-                            <li><a href="Venda">Venda</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Busca
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="BuscaFiliais">Filial</a></li>
-                            <li><a href="BuscaUsuarios">Usuário</a></li>
-                            <li><a href="BuscaProdutos">Produto</a></li>
-                        </ul>
-                    </li>
+                    <c:if test="${usuarioLogado.autorizado(funcionalidadeCadastroUsuario) || 
+                                  usuarioLogado.autorizado(funcionalidadeCadastroProduto) || 
+                                  usuarioLogado.autorizado(funcionalidadeCadastroUsuario)}">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Cadastrar
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeCadastroFilial)}">
+                                    <li><a href="CadastroFilial">Filial</a></li>
+                                </c:if>
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeCadastroProduto)}">
+                                    <li><a href="CadastroProduto">Produto</a></li>
+                                </c:if>
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeCadastroUsuario)}">
+                                    <li><a href="CadastroUsuario">Usuário</a></li>
+                                </c:if>                            
+                            </ul>
+                        </li>
+                    </c:if>
+                    <c:if test="${usuarioLogado.autorizado(funcionalidadeCompras) ||
+                                  usuarioLogado.autorizado(funcionalidadeVendas)}">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Operação
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeCompras)}">
+                                    <li><a href="Compra">Compra</a></li>
+                                </c:if> 
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeVendas)}">
+                                    <li><a href="Venda">Venda</a></li>
+                                </c:if> 
+                            </ul>
+                        </li>
+                    </c:if> 
+                    <c:if test="${usuarioLogado.autorizado(funcionalidadeBuscaFiliais) ||
+                                  usuarioLogado.autorizado(funcionalidadeBuscaUsuarios) ||
+                                  usuarioLogado.autorizado(funcionalidadeBuscaProdutos)}">
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Busca
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeBuscaFiliais)}">
+                                    <li><a href="BuscaFiliais">Filial</a></li>
+                                </c:if>
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeBuscaUsuarios)}">
+                                    <li><a href="BuscaUsuarios">Usuário</a></li>
+                                </c:if>
+                                <c:if test="${usuarioLogado.autorizado(funcionalidadeBuscaProdutos)}">
+                                    <li><a href="BuscaProdutos">Produto</a></li>
+                                </c:if>
+                            </ul>
+                        </li>
+                    </c:if>
+                    <c:if test="${usuarioLogado.autorizado(funcionalidadeRelatorios)}">
+                        <li><a href="#">Relatorios</a></li>
+                    </c:if>                    
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Relatorios
                         <span class="caret"></span>
@@ -54,7 +87,6 @@
                             <li><a href="RelatorioVenda">Venda</a></li>
                         </ul>
                     </li>
-                    <li><a href="Logout">Logout</a></li>
                 </ul>
             </div>
         </nav>
