--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
@@ -38,7 +38,7 @@
                 <table id="vendas" class="table table-striped table-bordered">
                     <thead>
                         <tr>
-                            <th>Id</th>
+                            <th>Id Venda</th>
                             <th>Data Venda</th>
                             <th>Código Produto</th>
                             <th>Nome Produto</th>
