--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
@@ -23,53 +23,65 @@
             <jsp:include page="menu.jspx"></jsp:include>
             <div class="container">
                 <h2>Relatório de Vendas </h2> 
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <label for="produtoId">Produto</label>
-                        <select class="form-control" id="produtoId" name="produtoId" required="required">
-                            <option value="">Todos</option>
-                            <c:forEach items="${produtos}" var="produto">
-                                <option value="${produto.codigoProduto}">${produto.produto}</option>
-                            </c:forEach>
-                        </select>
+                <form method="post">
+                    <div class="row">
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="dataInicial">Data Inicial</label>
+                                <input type="date" required="required" class="form-control" id="numero" name="dataInicial" placeholder="dataInicial" />
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <div class="form-group">
+                                <label for="dataFinal">Data Final</label>
+                                <input type="date" required="required" class="form-control" id="numero" name="dataFinal" placeholder="dataFinal" />
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="produtoId">Produto</label>
+                                <select class="form-control" id="produtoId" name="produtoId" required="required">
+                                    <option value="">Todos</option>
+                                    <c:forEach items="${produtos}" var="produto">
+                                        <option value="${produto.codigoProduto}">${produto.produto}</option>
+                                    </c:forEach>
+                                </select>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-success">Buscar</button>
+
+                        <table id="vendas" class="table table-striped table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Id Venda</th>
+                                    <th>Data Venda</th>
+                                    <th>Código Produto</th>
+                                    <th>Nome Produto</th>
+                                    <th>Id Usuario</th>
+                                    <th>Usuário</th>
+                                    <th>Quantidade</th>
+                                    <th>Valor Unitário</th>
+                                    <th>Valor</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <c:forEach var="venda" items="${Vendas}">
+                                    <tr>
+                                        <td class="id">${venda.idVenda}</td>
+                                        <td>${venda.dataVenda}</td>
+                                        <td>${venda.codigoProduto}</td>
+                                        <td>${venda.nomeProduto}</td>
+                                        <td>${venda.idUsuario}</td>
+                                        <td>${venda.nomeUsuario}</td>
+                                        <td>${venda.quantidade}</td>
+                                        <td>${venda.vrUnitario}</td>
+                                        <td>${venda.valor}</td>
+                                    </tr>           
+                                </c:forEach>
+                            </tbody>                    
+                        </table>
                     </div>
-                </div>
-                
-                <table id="vendas" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Id Venda</th>
-                            <th>Data Venda</th>
-                            <th>Código Produto</th>
-                            <th>Nome Produto</th>
-                            <th>Id Usuario</th>
-                            <th>Usuário</th>
-                            <th>Quantidade</th>
-                            <th>Valor Unitário</th>
-                            <th>Valor</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <c:forEach var="venda" items="${Vendas}">
-                            <tr>
-                                <td class="id">${venda.idVenda}</td>
-                                <td>${venda.dataVenda}</td>
-                                <td>${venda.codigoProduto}</td>
-                                <td>${venda.nomeProduto}</td>
-                                <td>${venda.idUsuario}</td>
-                                <td>${venda.nomeUsuario}</td>
-                                <td>${venda.quantidade}</td>
-                                <td>${venda.vrUnitario}</td>
-                                <td>${venda.valor}</td>
-                            </tr>           
-                        </c:forEach>
-                    </tbody>                    
-                </table>
-                <div class="row">
-                    <div class="col-md-12">
-                        
-                    </div>
-                </div>
+                </form>
             </div>
             <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
