--- a/Alan/src/main/webapp/WEB-INF/jsp/compra.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/compra.jspx
@@ -111,8 +111,8 @@
                 <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
                 <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
                 <script type="text/javascript" src="resources/js/toastr.min.js"><![CDATA[/*Teste*/]]></script>
-                <script type="text/javascript" src="resources/js/base.js"><![CDATA[/*Teste*/]]></script>
-                <script type="text/javascript" src="resources/js/compra.js"><![CDATA[/*Teste*/]]></script>
+                <script type="text/javascript" src="resources/js/telas/base.js"><![CDATA[/*Teste*/]]></script>
+                <script type="text/javascript" src="resources/js/telas/compra.js"><![CDATA[/*Teste*/]]></script>
         </body>
     </html>
 </jsp:root>
