--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -9,16 +9,13 @@
           version="2.0">
 
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
-
-    <!-- any content can be specified here, e.g.: -->
-    <h1> Projeto Alan</h1>
    
-    <div>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/Alan/Home">Alan</a>
-                </div>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/Alan/Home">Projeto Alan</a>
+            </div>
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <c:if test="${usuarioLogado.autorizado(funcionalidadeCadastroUsuario) || 
                                   usuarioLogado.autorizado(funcionalidadeCadastroProduto) || 
@@ -86,11 +83,14 @@
                             <li><a href="RelatorioCompra">Compra</a></li>
                         </ul>
                         </li>
-                    </c:if>                    
-                    
-                </ul>
-            </div>
-        </nav>
-    </div>        
+                    </c:if>  
+                    <li><a href="Logout">Logout</a></li>
+                </ul>    
+                <p class="navbar-text navbar-right" style="color:#9d9d9d;">
+                    Bem vindo ${usuarioLogado.nome} - Último login em: ${usuarioLogado.dataUltimoLogin}
+                </p>
+            </div>            
+        </div>
+    </nav>          
 
 </jsp:root>
