--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
@@ -48,6 +48,18 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                                <div class="form-group">
+                                    <label for="filialId">Filial</label>
+                                    <select class="form-control" id="filialId" name="filialId" required="required">
+                                        <c:forEach items="${filiais}" var="filial">
+                                            <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
+                                        </c:forEach>
+                                    </select>
+                                    <input type="hidden" id="hiddenFilialId" value="${produto.codigoFilial}" />
+                                </div>
+                        </div>
+                        
                         <button type="submit" class="btn btn-success">Buscar</button>
 
                         <table id="vendas" class="table table-striped table-bordered">
