--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioCompras.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioCompras.jspx
@@ -91,8 +91,23 @@
                                         <td>${compra.valor}</td>
                                     </tr>           
                                 </c:forEach>
-                            </tbody>                    
+                            </tbody>  
+                            <tfoot>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>Total Quantidade: </td>
+                                    <td>${quantidadeTotal}</td>
+                                     <td>Total valor:   </td>
+                                    <td>${valorTotal}</td>
+                                </tr>
+                            </tfoot>
                         </table>
+                        
                     </div>
                 </form>
             </div>
