--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
@@ -92,7 +92,22 @@
                                         <td>${venda.valor}</td>
                                     </tr>           
                                 </c:forEach>
-                            </tbody>                    
+                            </tbody>
+                            
+                            <tfoot>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>Total Quantidade: </td>
+                                    <td>${quantidadeTotal}</td>
+                                     <td>Total valor:   </td>
+                                    <td>${valorTotal}</td>
+                                </tr>
+                            </tfoot>
                         </table>
                     </div>
                 </form>
