--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioCompras.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioCompras.jspx
@@ -94,12 +94,7 @@
                             </tbody>  
                             <tfoot>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td colspan="6"></td>
                                     <td>Total Quantidade: </td>
                                     <td>${quantidadeTotal}</td>
                                      <td>Total valor:   </td>
