--- a/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/relatorioVendas.jspx
@@ -48,62 +48,68 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                                <div class="form-group">
-                                    <label for="filialId">Filial</label>
-                                    <select class="form-control" id="filialId" name="filialId" required="required">
-                                        <c:forEach items="${filiais}" var="filial">
-                                            <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
-                                        </c:forEach>
-                                    </select>
-                                    <input type="hidden" id="hiddenFilialId" value="${produto.codigoFilial}" />
-                                </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="filialId">Filial</label>
+                                <select class="form-control" id="filialId" name="filialId" required="required">
+                                    <c:forEach items="${filiais}" var="filial">
+                                        <option value="${filial.codigoFilial}">${filial.nomeFantasia}</option>
+                                    </c:forEach>
+                                </select>
+                                <input type="hidden" id="hiddenFilialId" value="${produto.codigoFilial}" />
+                            </div>
                         </div>
-                        
-                        <button type="submit" class="btn btn-success">Buscar</button>
-
-                        <table id="vendas" class="table table-striped table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>Id Venda</th>
-                                    <th>Id Filial</th>
-                                    <th>Data Venda</th>
-                                    <th>Código Produto</th>
-                                    <th>Nome Produto</th>
-                                    <th>Id Usuario</th>
-                                    <th>Usuário</th>
-                                    <th>Quantidade</th>
-                                    <th>Valor Unitário</th>
-                                    <th>Valor</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <c:forEach var="venda" items="${Vendas}">
+                        <div class="col-md-2">
+                            <div class="form-group right">
+                                <label> &#xA0;</label>
+                                <button type="submit" class="btn btn-success form-control">Buscar</button>
+                            </div>                            
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <table id="vendas" class="table table-striped table-bordered">
+                                <thead>
                                     <tr>
-                                        <td class="id">${venda.idVenda}</td>
-                                        <td>${venda.idFilial}</td>
-                                        <td>${venda.dataVenda}</td>
-                                        <td>${venda.codigoProduto}</td>
-                                        <td>${venda.nomeProduto}</td>
-                                        <td>${venda.idUsuario}</td>
-                                        <td>${venda.nomeUsuario}</td>
-                                        <td>${venda.quantidade}</td>
-                                        <td>${venda.vrUnitario}</td>
-                                        <td>${venda.valor}</td>
-                                    </tr>           
-                                </c:forEach>
-                            </tbody>
-                            
-                            <tfoot>
-                                <tr>
-                                    <td colspan="6"></td>
-                                    <td>Total Quantidade: </td>
-                                    <td>${quantidadeTotal}</td>
-                                     <td>Total valor:   </td>
-                                    <td>${valorTotal}</td>
-                                </tr>
-                            </tfoot>
-                        </table>
+                                        <th>Id Venda</th>
+                                        <th>Id Filial</th>
+                                        <th>Data Venda</th>
+                                        <th>Código Produto</th>
+                                        <th>Nome Produto</th>
+                                        <th>Id Usuario</th>
+                                        <th>Usuário</th>
+                                        <th>Quantidade</th>
+                                        <th>Valor Unitário</th>
+                                        <th>Valor</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <c:forEach var="venda" items="${Vendas}">
+                                        <tr>
+                                            <td class="id">${venda.idVenda}</td>
+                                            <td>${venda.idFilial}</td>
+                                            <td>${venda.dataVenda}</td>
+                                            <td>${venda.codigoProduto}</td>
+                                            <td>${venda.nomeProduto}</td>
+                                            <td>${venda.idUsuario}</td>
+                                            <td>${venda.nomeUsuario}</td>
+                                            <td>${venda.quantidade}</td>
+                                            <td>${venda.getValorUnitario()}</td>
+                                            <td>${venda.getValorStr()}</td>
+                                        </tr>           
+                                    </c:forEach>
+                                </tbody>                            
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="6"></td>
+                                        <td>Total Quantidade: </td>
+                                        <td>${quantidadeTotal}</td>
+                                         <td>Total valor:   </td>
+                                        <td>${valorTotal}</td>
+                                    </tr>
+                                </tfoot>
+                            </table>
+                        </div>
                     </div>
                 </form>
             </div>
