--- a/Alan/src/main/webapp/WEB-INF/jsp/login.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/login.jspx
@@ -5,7 +5,7 @@
           version="2.0">
 
     <jsp:directive.page contentType="text/html" pageEncoding="UTF-8"/>
-    
+
     <jsp:output omit-xml-declaration="true"
                 doctype-root-element="HTML"
                 doctype-system="about:legacy-compact"/>
@@ -17,10 +17,12 @@
             <link rel="stylesheet" href="resources/css/bootstrap.min.css"/>
             <link rel="stylesheet" href="resources/css/style.css"/>
         </head>       
-        <body>      
+        <body>
+
+            <img src="resources/images/water_banner2.png" class="img-water-banner"/>
+
             <div class="row">
-                <div class="col-md-offset-4 col-md-4">
-                    <h2>Login</h2>
+                <div class="col-md-offset-4 col-md-4" id="login-box">
                     <div class="box">
                         <form method="post">
                             <div class="row">
@@ -49,8 +51,9 @@
                         </form>  
                     </div>
                 </div>
+
             </div>
-            
+
             <script type="text/javascript" src="resources/js/jquery-2.2.3.min.js"><![CDATA[/*Teste*/]]></script>
             <script type="text/javascript" src="resources/js/bootstrap.min.js"><![CDATA[/*Teste*/]]></script>
         </body>
