--- a/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
+++ b/Alan/src/main/webapp/WEB-INF/jsp/menu.jspx
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/Alan/Home">Projeto Alan</a>
+                <a class="navbar-brand" href="/Alan/Home">Início</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
