--- a/Alan/src/main/webapp/resources/css/style.css
+++ b/Alan/src/main/webapp/resources/css/style.css
@@ -49,3 +49,20 @@ tr.has-error td {
     background-color:#FFE5E5;
     border:1px solid red;
 }
+
+#login-box {
+    //overflow: hidden;
+    margin-top: 16%;
+    position: absolute;
+    margin-left: 55%;
+    //margin-left: 55%;
+    //margin-top: 10%;
+}
+
+.img-water-banner{
+    position:relative;
+    float: right;
+    margin-top: 10%;
+    height: 100%; 
+    width: 100%;
+}
